syntax = "proto3";

import "google/protobuf/empty.proto";
import "work_enum.proto";
package ru.tinkoff.academy;

option java_package = "ru.tinkoff.academy.proto.worker";
option java_multiple_files = true;

service WorkerService {
  rpc findAll(google.protobuf.Empty) returns (stream WorkerResponse);
  rpc findByServices(WorkerByServicesRequest) returns (stream WorkerResponse);
  rpc createRequest(WorkerJobRequest) returns (WorkerJobResponse);
}

message WorkerResponse {
  string id = 1;
  string landscapeId = 2;
  repeated ru.tinkoff.academy.WorkEnum services = 3;
  double latitude = 4;
  double longitude = 5;
}

message WorkerByServicesRequest {
  repeated ru.tinkoff.academy.WorkEnum services = 1;
}

message WorkerJobRequest {
  string id = 1;
  repeated ru.tinkoff.academy.WorkEnum services = 2;
  double latitude = 3;
  double longitude = 4;
}

message WorkerJobResponse {
  WorkerJobEnum decision = 1;
}

enum WorkerJobEnum {
  rejected = 0;
  accepted = 1;
}
