syntax = "proto3";

import "google/protobuf/empty.proto";
package ru.tinkoff.academy;

option java_package = "ru.tinkoff.academy.proto.handyman.user";
option java_multiple_files = true;

service UserService {
  rpc findAll(google.protobuf.Empty) returns (stream UserResponse);
  rpc findAllByEmailOrTelephone(UserRequest) returns (stream UserResponse);
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string surname = 3;
  repeated WorkEnum skills = 4;
  string email = 5;
  string telephone = 6;
  repeated BankAccountResponse accounts = 7;
  bytes photo = 8;
}

message BankAccountResponse {
  int64 id = 1;
  string cardId = 2;
  PaymentSystem paymentSystem = 3;
  string bank = 4;
}

enum PaymentSystem {
  visa = 0;
  mastercard = 1;
  mir = 2;
  unionpay = 3;
}

enum WorkEnum {
  shovel = 0;
  plant = 1;
  water = 2;
  sow = 3;
}

message UserRequest {
  repeated SearchRequest searchRequest = 1;
  message SearchRequest {
    string email = 1;
    string telephone = 2;
  }
}
